# modern_onap_so

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  VALIDATION_REPORT.md  alembic.ini  docker-compose.yml  executive_summary.md  flows.md  init_db.py  load_test.md  migration_plan.md  pyproject.toml  security-report.json  spec.md  start_app.sh  tasks.md
.github/workflows/: ci.yml
docker/: docker-compose.yml
docs/: ci-cd.md  deployment-guide.md  kubernetes-deployment.md  monitoring.md  user-guide.md
helm/orchestrator/: Chart.yaml  values.yaml
helm/orchestrator/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  rbac.yaml  secret.yaml  service.yaml
k8s/overlays/dev/: configmap-patch.yaml  deployment-patch.yaml  kustomization.yaml
k8s/overlays/prod/: deployment-patch.yaml  hpa-patch.yaml  kustomization.yaml
load_test/: README.md  generate_report.py  generate_report_fixed.py  locustfile.py  run_load_test.sh  seed_database.py  simulate_load_test.py  start_app_for_load_test.sh
load_test/load_test_results/: stats_failures.csv  stats_stats.csv
migrations/: env.py  script.py.mako
migrations/versions/: 20250110_0000_initial_deployment_table.py  20251110_0658_dc70b626b97d_add_deployment_templates_table.py  20251110_2248_f7c0a80f759d_add_performance_indexes.py
monitoring/grafana/: configmap.yaml  orchestrator-overview.json  orchestrator-performance.json
monitoring/prometheus/: alerts.yaml  recording-rules.yaml  servicemonitor.yaml
scripts/: test-ci-locally.sh
src/orchestrator/: config.py  logging.py  main.py  metrics.py
src/orchestrator/api/middleware/: auth.py  errors.py  logging.py  rate_limit.py
src/orchestrator/api/v1/: configurations.py  deployments.py  health.py  metrics.py  scaling.py
src/orchestrator/clients/ansible/: client.py
src/orchestrator/db/: connection.py
src/orchestrator/models/: base.py  deployment.py  template.py
src/orchestrator/schemas/: configuration.py  deployment.py  scaling.py
src/orchestrator/services/: deployment_service.py
src/orchestrator/utils/: cache.py  circuit_breaker.py  retry.py  validation.py
src/orchestrator/workflows/: base.py  client.py  worker.py
tests/: README.md
tests/integration/: test_configure_flow.py  test_db_connection.py  test_delete_flow.py  test_deploy_flow.py  test_deployment_repository.py  test_scaling_flow.py  test_update_flow.py
tests/unit/: test_config.py  test_metrics.py
tests/unit/api/: conftest.py  test_auth.py  test_configurations.py  test_deployments.py  test_errors.py  test_health.py  test_logging_middleware.py  test_rate_limit.py  test_scaling.py
tests/unit/clients/: test_ansible.py  test_openstack.py
tests/unit/models/: test_deployment.py  test_template.py
tests/unit/repositories/: test_deployment_repository.py
tests/unit/services/: test_deployment_service.py
tests/unit/utils/: test_cache.py  test_circuit_breaker.py  test_retry.py  test_validation.py
tests/unit/workflows/: test_configure.py  test_delete.py  test_deploy.py  test_deployment_activities.py  test_scale.py  test_scaling_activities.py  test_update.py
(+16 files in other folders)
